--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -3,10 +3,10 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://120.24.186.190:3306/base_common?serverTimezone=Hongkong&useSSL=false
+    url: jdbc:mysql://localhost:3306/base_common?serverTimezone=Hongkong&useSSL=false
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: abcABC123...
+    password: qwertyuiop123.
 
 
 
