新增 评论|回复|动态|推文|弹幕 功能

--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,15 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!-- 模块生成依赖 -->
+        <dependency>
+            <groupId>com</groupId>
+            <artifactId>module-generator</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/generator/module-generator-1.0.jar</systemPath>
+        </dependency>
     </dependencies>
 
     <build>
