--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com</groupId>
-    <artifactId>project</artifactId>
+    <artifactId>project-common</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>project</name>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
